Detalles en templates y agregue index.html

--- a/Tarea5/Mocel/Mocel/templates/index.html
+++ b/Tarea5/Mocel/Mocel/templates/index.html
@@ -12,15 +12,15 @@
 	<body>
 		<header>
 			<h1>MOCEL</h1>
-			<nav>
-				<li><a href='#'>Clientes</a></li>
-			</nav>
 		</header>
 
 	<section>
 		{% block content %}
+		
+		<h5>BIENVENIDOS</h5>
 
-		{% endblock%}
+
+		{% endblock %}
 	</section>
 
 
