--- a/Tarea5/Mocel/Mocel/templates/crearCliente.html
+++ b/Tarea5/Mocel/Mocel/templates/crearCliente.html
@@ -1,5 +1,5 @@
-<!==Es una extension del archivo main.html==>
-{% extends 'main.html' %}
+<!==Es una extension del archivo index.html==>
+{% extends 'index.html' %}
 
 {% block title %} MOCEL - Cliente {% endblock%}
 
