--- a/Tarea5/Mocel/Mocel/templates/infoPostpago.html
+++ b/Tarea5/Mocel/Mocel/templates/infoPostpago.html
@@ -1,24 +1,27 @@
-{% block title %} MOCEL {% endblock%}
+<!==Es una extension del archivo index.html==>
+{% extends 'index.html' %}
+
+{% block title %} MOCEL - Cliente Postpago {% endblock%}
 
 {% block content %}
+	<h4> Informacion del producto: </h4>
+
+	<p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Serial: {{producto.numserie}}.<br>
+	    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nombre: {{producto.nombreprod}}.
+	</p>
+
+	<p> El producto posee un plan postpago. </p>
 
 
-<h4> Informacion del producto: </h4>
+	<h4> Detalles de ultima factura: </h4>
 
-<p> Serial: {{producto.numserie}}  <br>
-    Nombre: {{producto.nombreprod}}
-</p>
+	<p> El total a cobrar por: <br>
+	    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Plan: {{ totalPlan }}. <br>
+	    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Paquetes: {{ totalPaquetes }}.<br>
+	    TOTAL: {{ total }}.</p>
 
-
-<p> El producto posee un plan postpago </p>
-
-<h4> Detalles de ultima factura: </h4>
-
-<p> El total a cobrar por el plan es {{ totalPlan }} <br>
-    El total a cobrar por los paquetes es {{ totalPaquetes }}.<br>
-    El total a cobrar es {{ total }}.</p>
-
+	<a href="#"> Regresar </a>
 
 {% endblock%}
 
-<h4> <a href="#" onclick="history.go(-1)"> Regresar </a> </h4>
+
