--- a/Tarea5/Mocel/Mocel/templates/infoPrepago.html
+++ b/Tarea5/Mocel/Mocel/templates/infoPrepago.html
@@ -1,20 +1,20 @@
-{% block title %} MOCEL {% endblock%}
+<!==Es una extension del archivo index.html==>
+{% extends 'index.html' %}
+
+{% block title %} MOCEL - Cliente Prepago{% endblock%}
 
 {% block content %}
+	<h4> Informacion del producto: </h4>
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Serial: {{producto.numserie}}  <br>
+	   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nombre: {{producto.nombreprod}}
+	</p>
 
+	<p> El producto posee un plan prepago. </p>
 
-<h4> Informacion del producto </h4>
+	<p> Posee un saldo de: {{saldo}} Bs.</p>
 
-<p> Serial: {{producto.numserie}}  <br>
-    Nombre: {{producto.nombreprod}}
-</p>
-
-
-<p> El producto posee un plan prepago </p>
-
-
-<p> Posee un saldo de Bs. : {{saldo}}</p>
+	<a href="#"> Regresar </a>
 
 {% endblock%}
 
-<h4> <a href="#" onclick="history.go(-1)"> Regresar </a> </h4>
+
