--- a/Tarea5/Mocel/Mocel/templates/infoSinPlan.html
+++ b/Tarea5/Mocel/Mocel/templates/infoSinPlan.html
@@ -1,17 +1,22 @@
-{% block title %} MOCEL {% endblock%}
+<!==Es una extension del archivo index.html==>
+{% extends 'index.html' %}
+
+{% block title %} MOCEL - No posee plan{% endblock%}
 
 {% block content %}
+	<h4> Informacion del producto: </h4>
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Serial: {{producto.numserie}}  <br>
+	   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nombre: {{producto.nombreprod}}
+	</p>
 
+	<p> El producto no posee un plan asociado. </p>
 
-<h4> Informacion del producto </h4>
-
-<p> Serial: {{producto.numserie}}  <br>
-    Nombre: {{producto.nombreprod}}
-</p>
-
-
-<p> El producto no posee plan asociado </p>
+	<a href="#"> Regresar </a>
 
 {% endblock%}
 
-<h4> <a href="#" onclick="history.go(-1)"> Regresar </a> </h4>
+
+
+
+
+
