--- a/Tarea5/Mocel/Mocel/templates/listarCliente.html
+++ b/Tarea5/Mocel/Mocel/templates/listarCliente.html
@@ -1,16 +1,21 @@
-{% block title %} MOCEL {% endblock%}
+<!==Es una extension del archivo index.html==>
+{% extends 'index.html' %}
 
-<h4> Lista de Clientes </h4> 
+{% block title %} MOCEL - Lista de clientes {% endblock %}
 
+ 
 {% block content %}
+	<h4> Lista de Clientes </h4>
 
-<ul>
-{% for cliente in lista_clientes %}
-    <li> Nombre: {{cliente.nombrecl}} <br>
-         Cedula: {{ cliente.cedula }} <br>
-         <a href="/cliente/{{ cliente.cedula }}/"> Productos </a> <br> <br>
-    </li>
-{% endfor %}
-</ul>
+	{{ informacion }}
 
-{% endblock%}
+	<ul>
+	{% for cliente in lista_clientes %}
+	    <li> Nombre: {{cliente.nombrecl}} <br>
+		 Cedula: {{ cliente.cedula }} <br>
+		 <a href="/cliente/{{ cliente.cedula }}/"> Productos </a> <br> <br>
+	    </li>
+	{% endfor %}
+	</ul>
+
+{% endblock %}
