--- a/Tarea5/Mocel/Mocel/templates/index.html
+++ b/Tarea5/Mocel/Mocel/templates/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 
 <html>
-
 	<!--HEAD-->
 	<head>
 		<title> {% block title %} MOCEL {% endblock%}</title>
@@ -12,11 +11,24 @@
 	<body>
 		<header>
 			<h1>MOCEL</h1>
+			<nav>
+				<a href="{% url 'vista_principal' %}">Inicio</a>	
+				
+				{% if user.is_authenticated %}
+					<a href="#">Productos</a>
+
+					<a href="#">Servicios</a>
+
+					<a href="{% url 'vista_logout' %}">Logout</a>
+				{% else %}
+					<a href="{% url 'vista_login' %}">Login</a>
+				{% endif %}
+			</nav>
 		</header>
 
 	<section>
 		{% block content %}
-		
+		<br>		
 		<h5>BIENVENIDOS</h5>
 
 
