--- a/Tarea5/Mocel/Mocel/templates/infoPostpago.html
+++ b/Tarea5/Mocel/Mocel/templates/infoPostpago.html
@@ -20,7 +20,7 @@
 	    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Paquetes: {{ totalPaquetes }}.<br>
 	    TOTAL: {{ total }}.</p>
 
-	<a href="#"> Regresar </a>
+	<a href="/cliente/{{ user.username }}/"> Regresar </a>
 
 {% endblock%}
 
