--- a/Tarea5/Mocel/Mocel/templates/infoPrepago.html
+++ b/Tarea5/Mocel/Mocel/templates/infoPrepago.html
@@ -1,19 +1,19 @@
 <!==Es una extension del archivo index.html==>
 {% extends 'index.html' %}
 
-{% block title %} MOCEL - Cliente Prepago{% endblock%}
+{% block title %} MOCEL - Cliente Prepago {% endblock%}
 
 {% block content %}
 	<h4> Informacion del producto: </h4>
-	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Serial: {{producto.numserie}}  <br>
-	   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nombre: {{producto.nombreprod}}
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Serial: {{ producto.numserie }}  <br>
+	   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nombre: {{ producto.nombreprod }}
 	</p>
 
 	<p> El producto posee un plan prepago. </p>
 
 	<p> Posee un saldo de: {{saldo}} Bs.</p>
 
-	<a href="#"> Regresar </a>
+	<a href="/cliente/{{ user.username }}/"> Regresar </a>
 
 {% endblock%}
 
