--- a/Tarea5/Mocel/Mocel/templates/admin/WebAccess/app_index.html
+++ b/Tarea5/Mocel/Mocel/templates/admin/WebAccess/app_index.html
@@ -5,7 +5,7 @@
     <div class="module">
       <h2>Facturación</h2>
       <ul>
-        <li><a href="../../../pedirCliente">
+        <li><a href="facturar">
           <b><h3>Obtener factura de un cliente</h3></b>
         </a></li>
         <!-- Etc... -->
