Pequenos detalles de interfaz

--- a/Tarea5/Mocel/Mocel/WebAccess/static/Mocel/style.css
+++ b/Tarea5/Mocel/Mocel/WebAccess/static/Mocel/style.css
@@ -136,7 +136,7 @@ h2 {
     font-size: 1.2em;
     color: #369;
     font-weight: normal;
-    font-family: sans-serif;
+    font-family: arial;
 }
 
 h3 {
