--- a/Tarea5/Mocel/Mocel/templates/index.html
+++ b/Tarea5/Mocel/Mocel/templates/index.html
@@ -5,7 +5,7 @@
 <html>
 	<!--HEAD-->
 	<head>
-		<title> {% block title %} MOCEL {% endblock%}</title>
+		<title> {% block title %} SERVISOFT {% endblock%}</title>
 		<meta charset="utf-8">
         </div>
  
@@ -17,10 +17,10 @@
     <div class="container_3">
         <div class="grid_3">
             <div class="banner"></div>
-
+            <div class="blue_Bar"></div>
 		    <header>
 
-			    <h4>MOCEL</h4>
+			    <h4>SERVISOFT</h4>
 
 	            <section>
 		            {% block content %}	
