Agregado link para punto 5 en interfaz admin

--- a/Tarea5/Mocel/Mocel/templates/admin/WebAccess/app_index.html
+++ b/Tarea5/Mocel/Mocel/templates/admin/WebAccess/app_index.html
@@ -8,6 +8,9 @@
         <li><a href="facturar">
           <b><h3>Obtener factura de un cliente</h3></b>
         </a></li>
+        <li><a href="facturarTodos">
+          <b><h3>Obtener factura de un cliente</h3></b>
+        </a></li>
         <!-- Etc... -->
       </ul>
     </div>
