--- a/Tarea5/Mocel/Mocel/templates/infoPostpago.html
+++ b/Tarea5/Mocel/Mocel/templates/infoPostpago.html
@@ -20,7 +20,7 @@
 	    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Paquetes: {{ totalPaquetes }}.<br>
 	    TOTAL: {{ total }}.</h3> <br>
 
-	<h2> <a href="/cliente/{{ user.username }}/"> Regresar </a></h2>
+	<h2> <a href="/cliente/{{ producto.cedula.cedula }}/"> Regresar </a></h2>
 
 {% endblock%}
 
