--- a/Tarea5/Mocel/Mocel/templates/infoPrepago.html
+++ b/Tarea5/Mocel/Mocel/templates/infoPrepago.html
@@ -14,7 +14,7 @@
 
 	<h2> <p> Posee un saldo de: {{saldo}} Bs.</p> <h2> <br> 
 
-	<h2> <a href="/cliente/{{ user.username }}/"> Regresar </a> </h2>
+	<h2> <a href="/cliente/{{ producto.cedula.cedula }}/"> Regresar </a> </h2>
 
 {% endblock%}
 
