--- a/Tarea5/Mocel/Mocel/templates/infoSinPlan.html
+++ b/Tarea5/Mocel/Mocel/templates/infoSinPlan.html
@@ -4,15 +4,16 @@
 {% block title %} MOCEL - No posee plan {% endblock%}
 
 {% block content %}
-	<h4> Informacion del producto: </h4>
-	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Serial: {{ producto.numserie }}  <br>
+	<h1> Informacion del producto: </h1>
+
+	<h3><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Serial: {{ producto.numserie }}  <br>
 	   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nombre: {{ producto.nombreprod }}
-	</p>
+	</p></h3>
 
-	<p> El producto no posee un plan asociado. </p>
+	<h3> <p> El producto no posee un plan asociado. </p> </h3> 
 
-	<a href="/cliente/{{ user.username }}/"> Regresar </a>
-
+	<h2> <a href="/cliente/{{ producto.cedula.cedula }}/"> Regresar </a> </h2>
+	
 {% endblock%}
 
 
