Corregido el error de los links en WebAccess

--- a/Tarea5/Mocel/Mocel/templates/admin/WebAccess/app_index.html
+++ b/Tarea5/Mocel/Mocel/templates/admin/WebAccess/app_index.html
@@ -5,11 +5,11 @@
     <div class="module">
       <h2>Facturación</h2>
       <ul>
-        <li><a href="facturar">
+        <li><a href="/pedirCliente/">
           <b><h3>Obtener factura de un cliente</h3></b>
         </a></li>
-        <li><a href="facturarTodos">
-          <b><h3>Obtener factura de un cliente</h3></b>
+        <li><a href="/buscarTodasFacturas/">
+          <b><h3>Obtener toda la facturacion del sistema</h3></b>
         </a></li>
         <!-- Etc... -->
       </ul>
