--- a/Tarea5/ServiSoft/ServiSoft/templates/index.html
+++ b/Tarea5/ServiSoft/ServiSoft/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% load staticfiles %}
-<link rel="stylesheet" type="text/css" href= "{% static 'Mocel/style.css' %}" />
+<link rel="stylesheet" type="text/css" href= "{% static 'ServiSoft/style.css' %}" />
 
 <html>
 	<!--HEAD-->
