--- a/Tarea5/ServiSoft/ServiSoft/templates/pedirCliente.html
+++ b/Tarea5/ServiSoft/ServiSoft/templates/pedirCliente.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-<link rel="stylesheet" type="text/css" href= "{% static 'Mocel/style.css' %}" />
+<link rel="stylesheet" type="text/css" href= "{% static 'ServiSoft/style.css' %}" />
 
 <html>
 <head>
